# harbour-hydroxide

harbour-hydroxide-ui/: CMakeLists.txt  harbour-hydroxide-ui.desktop
harbour-hydroxide-ui/qml/: harbour-hydroxide-ui.qml
harbour-hydroxide-ui/qml/cover/: CoverPage.qml
harbour-hydroxide-ui/qml/pages/: AboutPage.qml  AccountsPage.qml  ConfirmDeletePage.qml  HowToPage.qml  MainPage.qml
harbour-hydroxide-ui/rpm/: harbour-hydroxide-ui.spec
harbour-hydroxide-ui/src/: BridgeHelper.cpp  BridgeHelper.h  main.cpp
rpm/: harbour-hydroxide.spec
systemd/: hydroxide.service
